fixed the user controller issues that were not allowing me to view any user pages. Rerouted a user view instead of users/name let it be just home since that is where a user normally goes when they view info about themselves. Added additional styling to CSS for the layout, column spacing and nav bar. Still need to fix navbar styling

--- a/public/stylesheet/stylesheet.css
+++ b/public/stylesheet/stylesheet.css
@@ -93,3 +93,12 @@ footer {
 }
 
 /* ///////// NAV BAR /////////*/
+
+
+
+/* //////////HOME VIEW////////// */
+div#home-view {
+  -webkit-columns: 100px 3;
+  -moz-columns: 100px 3;
+  columns: 100px 3;
+}
